Display legacy registration data

--- a/config/assets/sass/_misc.scss
+++ b/config/assets/sass/_misc.scss
@@ -68,3 +68,10 @@ img.border {
         }
     }
 }
+
+p.legacy_meet_data {
+    margin     : -1em 0 2em 3em;
+    font-style : italic;
+    font-size  : 0.75em;
+    line-height: 1em;
+}
