Phone formatting on meet data + better notes formatting

--- a/config/assets/sass/_registration.scss
+++ b/config/assets/sass/_registration.scss
@@ -139,4 +139,8 @@ div#meet_data {
     tr.past_due td {
         background-color: #fcc;
     }
+
+    div.notes {
+        margin-left: 1em;
+    }
 }
