Force verse counts to be numbers

--- a/config/assets/sass/_registration.scss
+++ b/config/assets/sass/_registration.scss
@@ -69,6 +69,7 @@ div#register {
                 input[name="verses"] {
                     text-align: right;
                     width     : 4em;
+                    border    : none;
                 }
 
                 span.material-symbols-outlined:hover {
